# FCC_calo_analysis_cpp

./: .gitignore  CMakeLists.txt  README.md  howto.txt  init.sh  setup.sh
caloAnalysis/: CMakeLists.txt  CaloAnalysis.cc  CaloAnalysis.h  CaloAnalysis_cell.cc  CaloAnalysis_cell.h  CaloAnalysis_more.cc  CaloAnalysis_more.h  CaloAnalysis_profiles.cc  CaloAnalysis_profiles.h  CaloAnalysis_simple.cc  CaloAnalysis_simple.h  HistogramClass.cc  HistogramClass.h  HistogramClass_cell.cc  HistogramClass_cell.h  HistogramClass_more.cc  HistogramClass_more.h  HistogramClass_profiles.cc  HistogramClass_profiles.h  LinkDef.h  c_e100_all.eps  langaus.py  langaus_C.d  langaus_C_ACLiC_dict_rdict.pcm  plot.py  plot_all.py  plot_all1.py  plot_all_e.py  test_macro.C  test_macro.py  test_macro1.py  test_macro_C.d  test_macro_C_ACLiC_dict_rdict.pcm  test_macro_cell.py  test_macro_more.py  test_macro_profiles.py  test_macro_simple.py
example/: CMakeLists.txt  read-calo.cc  read-hcal.cc
example-lib/: CMakeLists.txt  test_macro.py
include/: BaseAnalysis.h  BaseTwoFileAnalysis.h  CaloAnalysis_profiles.h  CaloAnalysis_recoExample.h  CaloAnalysis_recoMonitor.h  CaloAnalysis_simple.h  CellAnalysis.h  ClustersAnalysis.h  Decoder.h  HistogramClass.h  HistogramClass_cell.h  HistogramClass_profiles.h  HistogramClass_recoExample.h  HistogramClass_recoMonitor.h  LinkDef.h  PileupNoise.h  ReconstructionExample.h  ReconstructionExampleWithCells.h  ShowerProfiles.h  SimpleAnalysis.h  SimpleClusters.h  SingleParticleRecoMonitors.h  TwoFileAnalysis.h
scripts/: calo_init.py  capacitanceEcalBarrel.py  capacitance_ecalBarrel.py  capacitance_ecalBarrel_fccee.py  capacitance_emec.py  draw_functions.py  elecNoise_ecalBarrel.py  elecNoise_ecalBarrel_fccee.py  elecNoise_emec.py  electronicNoise.py  pileupClusterNoise.py  pileupNoise.py  plot_clusterAnalysis.py  plot_clusterMonitor.py  plot_compareResolutions.py  plot_enResolution.py  plot_energyDistribution.py  plot_pileup.py  plot_pileupNoise.py  plot_recoExample.py  plot_recoMonitor.py  plot_samplingFraction.py  plot_upstreamCorrecton.py  plot_upstreamCorrectonEtaParams.py  prepare_pileup.py  presentation_reco.py  sshape.py  test_decoder.py  test_macro_cell.py  test_macro_profiles.py  test_macro_simple.py
src/: BaseAnalysis.cc  BaseTwoFileAnalysis.cc  CaloAnalysis_recoExample.cc  CaloAnalysis_recoMonitor.cc  CaloAnalysis_simple.cc  CellAnalysis.cc  ClustersAnalysis.cc  Decoder.cc  HistogramClass.cc  HistogramClass_cell.cc  HistogramClass_profiles.cc  HistogramClass_recoExample.cc  HistogramClass_recoMonitor.cc  PileupNoise.cc  ReconstructionExample.cc  ReconstructionExampleWithCells.cc  ShowerProfiles.cc  SimpleAnalysis.cc  SimpleClusters.cc  SingleParticleRecoMonitors.cc  TwoFileAnalysis.cc
tools/: CMakeLists.txt  test.C
